[package]
name = "aoc"
version = "0.1.0"
authors = ["Vadim Nikolaev <defntvdm@gmail.com>"]
edition = "2018"

[[bin]]
name = "day8"
src = "src/bin/day8.rs"

[[bin]]
name = "day7"
src = "src/bin/day7.rs"

[[bin]]
name = "day6"
src = "src/bin/day6.rs"

[[bin]]
name = "day5"
src = "src/bin/day5.rs"

[[bin]]
name = "day4"
src = "src/bin/day4.rs"

[[bin]]
name = "day3"
src = "src/bin/day3.rs"

[[bin]]
name = "day2"
src = "src/bin/day2.rs"

[[bin]]
name = "day1"
src = "src/bin/day1.rs"

[dependencies]
